tests/samples/invalid/unrelated_error_constant_array_length.pn
const UNRELATED_ERROR: u8 = -10i32;

const MAX_LEN: usize = 4;

const GLOBAL_BUFFER: [MAX_LEN]i32 = [1, 2, 3, 4];
